<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/product_details_name_hint"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/product_details_category_hint"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/category_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/product_details_quantity_hint"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/quantity_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:padding="4dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/product_details_brand_hint"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/brand_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/product_details_price_hint"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/product_details_description_hint"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="10"
                android:padding="4dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:text="@string/product_details_save" />

        </LinearLayout>

    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/done_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/loading_success" />


</FrameLayout>