<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/container">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/card_pay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/payment_card" />

        <Button
            android:id="@+id/cash_pay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/payment_cash" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/payment_cancel" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/payment_success_anim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        android:visibility="gone"
        app:lottie_rawRes="@raw/payment_successful" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/payment_cancel_anim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        android:visibility="gone"
        app:lottie_rawRes="@raw/payment_failed" />

</FrameLayout>