<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quicksellapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_quickSell"
            app:destination="@id/quickSellFragment" />

        <action
            android:id="@+id/action_nav_home_to_products"
            app:destination="@id/productsFragment" />

    </fragment>

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.quicksellapp.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.quicksellapp.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.example.quicksellapp.ui.products.ProductsFragment"
        android:label="ProductsFragment" >
        <action
            android:id="@+id/action_productsFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>

    <fragment
        android:id="@+id/quickSellFragment"
        android:name="com.example.quicksellapp.ui.quicksell.QuickSellFragment"
        android:label="QuickSellFragment" >
        <action
            android:id="@+id/action_quickSellFragment_to_productDetails"
            app:destination="@id/productDetails" />
    </fragment>
    <fragment
        android:id="@+id/productDetails"
        android:name="com.example.quicksellapp.ui.products.details.ProductDetailsFragment"
        android:label="ProductDetails" >
        <argument
            android:name="productCategory"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="productPrice"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.quicksellapp.ui.payment.PaymentFragment"
        android:label="PaymentFragment" >
        <argument
            android:name="price"
            app:argType="string" />
    </fragment>

</navigation>