<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/home_logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_trade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.example.quicksellapp.util.customviews.CardElementView
        android:id="@+id/home_quick_sel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardTitle="@string/home_quick_sell"
        app:imgSrc="@drawable/ic_selling"
        app:layout_constraintBottom_toTopOf="@id/home_close_btn"
        app:layout_constraintEnd_toStartOf="@id/home_products_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_logo_iv" />

    <com.example.quicksellapp.util.customviews.CardElementView
        android:id="@+id/home_products_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardTitle="@string/home_products"
        app:imgSrc="@drawable/ic_products"
        app:layout_constraintBottom_toBottomOf="@id/home_quick_sel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_quick_sel_btn"
        app:layout_constraintTop_toTopOf="@id/home_quick_sel_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_close_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/home_close"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_quick_sel_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>